# Junction22Met-s

./: README.md  package-lock.json
.github/workflows/: cd.yml
backend/: .env  .gitignore  Dockerfile  Taskfile.yml  alembic.ini  create_token.py  docker-compose.yml  fly.toml  private.pem  public.pem  pyproject.toml  readme.md  resetdb.py  seed.py
backend/app/: main.py  settings.py
backend/app/db/: base.py  deps.py  utils.py
backend/app/dependencies/: auth.py
backend/app/models/: community.py  item.py  peaks.py  task.py  task_activity.py  task_completion.py  user.py
backend/app/routers/: community.py  peaks.py  tasks.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 016c95d4c187_create_table_task_task_activity.py  0454f2e51980_add_is_value_to_peaks.py  407d5d1474f8_create_community_table.py  6ca6ffbfd1f2_pekka_tekee_sudokun.py  7128bc4e6461_alter_user_delete_first_lastname_add_.py  b218e1f7cfa8_create_table_item.py  b4ff9cc66fbf_create_table_user.py  bb873d3f509c_add_column_money_amount_saved.py  c65a165d8fbf_create_table_peaks.py  cfe4d1cf8fd3_add_column_emissions_saved.py
backend/seeders/: seeder.py
backend/tests/: conftest.py  test_community.py  test_routes.py  test_tasks.py  test_users.py
frontend/: .eslintrc.js  .gitignore  App.tsx  metro.config.js  package-lock.json  package.json
frontend/src/: Forestview.tsx  Root.tsx
frontend/src/3d-elements/: Maindisc.tsx  Pinetreetest3.js  Tree.tsx  pinetreetest2.glb  pinetreetest3.gltf
frontend/src/components/: Task.tsx  TaskList.tsx  Test.tsx  World.tsx
frontend/src/redux/: store.ts  types.ts
metas/: README.md  db.json  package-lock.json  package.json
metas/public/: community-full.gltf  community-small.gltf  large1disc.gltf  medium1disc.gltf  medium2disc.gltf
metas/src/: App.tsx  index.tsx
metas/src/components/: CommunityHub.tsx  CreateCommunity.tsx  Forest.tsx  ForestView.tsx  HomeView.tsx  Login.tsx  StatsView.tsx  TaskItem.tsx  TaskListView.tsx  TaskPage.tsx  text.tsx
metas/src/data/: api.ts  tasksMockup.tsx
(+19 files in other folders)
