[tool.poetry]
name = "metsabakkari"
version = "0.1"
description = "Synkkää clojuree"
authors = ["Pekka Mattinen <pekka@webso.fi>"]


[tool.poetry.dependencies]
# main
python = ">=3.8,<4.0"
fastapi = ">=0.76"
uvicorn = "*"
python-dotenv = "*"

# database
alembic = "*"
requests = "^2.28.1"
PyJWT = "^2.6.0"
cryptography = "^38.0.3"
pandas = "^1.5.1"
scipy = "^1.9.3"
SQLAlchemy = "^1.4.43"
psycopg2-binary = "^2.9.5"


[tool.poetry.dev-dependencies]
## linters
black = "*"
isort = "*"
mypy = "*"
pylint = "*"

## tests
httpx = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
Faker = "^15.2.0"


[build-system]
requires = ["poetry-core^1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
multi_line_output = 3
length_sort = true
py38 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''
force-exclude = '''
/(
    migrations
)/
'''


[tool.isort]
src_paths = ["app", "tests"]
line_length = 120
skip = ["venv", "migrations", ".git", "proto"]
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
use_parentheses = true


[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
follow_imports = "silent"
pretty = true
exclude = ["tests/", "migrations/"]
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
plugins = "pydantic.mypy"

[[pydantic-mypy]]
warn_required_dynamic_aliases = true
warn_untyped_fields = true
init_typed = true

[[mypy-tests."*"]] # exclude doesn't work in some cases, e.g. in VSCode integration
ignore_errors = true


[tool.pylint.MASTER]
extension-pkg-whitelist="pydantic"
[tool.pylint.FORMAT]
max-line-length = 120


[tool.pytest.ini_options]
asyncio_mode="auto"
